--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
-spaceinvaders.sublime-project
-spaceinvaders.sublime-workspace
+built
+node_modules
+yotta_modules
+yotta_targets
+pxt_modules
+*.db
+*.tgz
+.header.json
